<resources>
    <string name="app_name">PayDataApp</string>
    <string name="title_activity_main">Dashboard || PayDataApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_autofire">Full Autofire</string>
    <string name="menu_grenade">Grenade Accuracy</string>
    <string name="menu_database">NPC/PC Database</string>
    <string name="menu_full_combat">Combat Dashboard</string>
    <string name="menu_settings">Settings</string>
    <string name="afc_profile_name">Profile name (optional)</string>
    <string name="afc_field_atk_rank">Atk Skill</string>
    <string name="afc_field_def_rank">Def Body</string>
    <string name="afc_field_nbr_shots"># of Shots</string>
    <string name="afc_field_base_tn">Base TN</string>
    <string name="afc_field_target_mods">Target Mods (total)</string>
    <string name="afc_field_label_damage">Base Dmg Code:</string>
    <string name="afc_field_dmg_power">4</string>
    <string name="afc_field_dmg_stage">3</string>
    <string-array name="dmg_levels_array">
        <item value="--">--</item>
        <item value="L">L</item>
        <item value="M">M</item>
        <item value="S">S</item>
        <item value="D">D</item>
    </string-array>
    <string name="afc_opt_dmg_lvl_0">--</string>
    <string name="afc_opt_dmg_lvl_1">L</string>
    <string name="afc_opt_dmg_lvl_2">M</string>
    <string name="afc_opt_dmg_lvl_3">S</string>
    <string name="afc_opt_dmg_lvl_4">D</string>
    <string name="afc_field_label_armor">Ballistic Armor Ratings:</string>
    <string name="afc_field_dermal_armor">Dermal</string>
    <string name="afc_field_worn_armor">Worn</string>
    <string name="afc_button_send">Fire!</string>

    <string name="afr_label_dmg_lvl_miss">- Miss</string>
    <string name="afr_label_dmg_lvl_0">- Hit, No damage</string>
    <string name="afr_label_dmg_lvl_1">! Light wound (1 box)</string>
    <string name="afr_label_dmg_lvl_2">!!! Moderate wound (3 boxes)</string>
    <string name="afr_label_dmg_lvl_3">!!!!!! Serious wound (6 boxes)</string>
    <string name="afr_label_dmg_lvl_4">!!!!!!!!!! Deadly wound (All boxes)</string>
    <string name="afr_view_title">Full Autofire Results</string>
    <string name="afr_msg_dodge_pool">Don\'t forget to handle Dodge Pool!</string>
    <string name="afr_msg_skillcap">\n!! # shots higher than skill allows; reduced to max.\n</string>
    <string name="afr_msg_maxcap">\n!! # shots higher than 1e rule (7 max); reduced to 7.\n</string>
    <string name="afr_rollLog_recoil">\n ◄ Applying recoil modifier +</string>
</resources>
