<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_autofire_calculator">

    <EditText
        android:id="@+id/pcNameText"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/afc_profile_name"
        android:inputType="textPersonName"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#606060"
        android:onClick="sendMessage"
        android:text="@string/afc_button_send"
        android:textColor="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/pcNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pcNameText" />

    <EditText
        android:id="@+id/atkRankText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="4"
        android:hint="@string/afc_field_atk_rank"
        android:inputType="number"
        android:maxEms="4"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcNameText" />

    <EditText
        android:id="@+id/baseTNText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:hint="@string/afc_field_base_tn"
        android:inputType="number"
        android:maxEms="5"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atkRankText" />

    <EditText
        android:id="@+id/dmgStagingText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/afc_field_dmg_stage"
        android:inputType="number"
        android:maxEms="2"
        android:minEms="2"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/dmgPowerText"
        app:layout_constraintStart_toEndOf="@+id/dmgLevelSpin" />

    <EditText
        android:id="@+id/dmgPowerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/afc_field_dmg_power"
        android:inputType="number"
        android:maxEms="2"
        android:minEms="2"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/dmgCodeLabel"
        app:layout_constraintStart_toEndOf="@+id/dmgCodeLabel" />

    <EditText
        android:id="@+id/defRankText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="4"
        android:hint="@string/afc_field_def_rank"
        android:inputType="number"
        android:maxEms="4"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/atkRankText"
        app:layout_constraintStart_toEndOf="@+id/atkRankText" />

    <EditText
        android:id="@+id/nbrShotsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="5"
        android:hint="@string/afc_field_nbr_shots"
        android:inputType="number"
        android:maxEms="5"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/defRankText"
        app:layout_constraintStart_toEndOf="@+id/defRankText" />

    <TextView
        android:id="@+id/dmgCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/afc_field_label_damage"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#f84"
        android:textColorLink="#f84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseTNText" />

    <Spinner
        android:id="@+id/dmgLevelSpin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/dmgPowerText"
        app:layout_constraintTop_toBottomOf="@+id/baseTNText" />

    <EditText
        android:id="@+id/armorWornText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="4"
        android:hint="@string/afc_field_worn_armor"
        android:inputType="number"
        android:maxEms="5"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/armorDermalText"
        app:layout_constraintStart_toEndOf="@+id/armorDermalText" />

    <EditText
        android:id="@+id/armorDermalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="4"
        android:hint="@string/afc_field_dermal_armor"
        android:inputType="number"
        android:maxEms="5"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/afc_field_label_armor"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#f84"
        android:textColorLink="#f84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dmgPowerText" />

    <EditText
        android:id="@+id/targetModsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="8"
        android:hint="@string/afc_field_target_mods"
        android:inputType="numberSigned|number"
        android:textColor="#f84"
        android:textColorHighlight="#f84"
        android:textColorHint="#842"
        android:textColorLink="#f84"
        app:layout_constraintBaseline_toBaselineOf="@+id/baseTNText"
        app:layout_constraintStart_toEndOf="@+id/baseTNText" />
</android.support.constraint.ConstraintLayout>